Apps/readeck/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: readeck
  name: readeck-service
  namespace: readeck
spec:
  ports:
    - name: "8000"
      port: 80
      targetPort: 8000
  selector:
    app: readeck
